[#1672] Prevent button's text in MainMenu to overflow

--- a/prewikka/htdocs/css/style.less
+++ b/prewikka/htdocs/css/style.less
@@ -174,6 +174,20 @@ p {
         input {
             width: 100%;
         }
+        .btn-group {
+          max-width: 100%;
+          button {
+            max-width: 100%;
+            span {
+              text-overflow: ellipsis;
+              white-space: nowrap;
+              overflow: hidden;
+              max-width: 100%;
+              display: inherit;
+              max-height: 14px;
+            }
+          }
+        }
     }
     .form-group-date {
         max-width: 140px;
